--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -77,7 +77,7 @@ block.cyber-io-wireless-tower.stats.power-use=Based on the amount of power use.
 block.cyber-io-data-miner.name=Data Miner
 block.cyber-io-data-miner.description=Extracts the real mineral by AI. If you find this, please know that this item is reserved. 
 block.cyber-io-heimdall.name=Heimdall
-block.cyber-io-heimdall.description=The combination of biotech, brain science and Ions, using Brain\u2013computer interfaces and neural network, can totally change the enemy's mindset.\nHas varying upgrades whenever connected properly.
+block.cyber-io-heimdall.description=The combination of biotech, brain science and Iot, using Brain\u2013computer interfaces and neural network, can totally change the enemy's mindset.\nHas varying upgrades whenever connected properly.
 block.cyber-io-heimdall.details=The project of New Brains Crop.
 block.cyber-io-heimdall.stats.power-use=Based on upgrade components.
 block.cyber-io-heimdall-eye.name=Eye of Heimdall
@@ -90,10 +90,10 @@ block.cyber-io-heimdall-heart.name=Heart of Heimdall
 block.cyber-io-heimdall-heart.description=The latest result of the Heimdall Project, and it's still in bleeding-edge testing.
 block.cyber-io-heimdall-heart.details=An upgrade component designed to be independent by New Brains Crop.
 block.cyber-io-DDoS.name=DDoS
-block.cyber-io-DDoS.description=Send all data to this. If you find "Denied" on this page, please contact your network administrator for more information.
+block.cyber-io-DDoS.description=Send all your data to this. If you find "Denied" on this page, please contact your network administrator for more information.
 block.cyber-io-DDoS.deny=Denied
 block.cyber-io-zip-bomb.name=Zip Bomb
-block.cyber-io-zip-bomb.description=Don't double-click this!
+block.cyber-io-zip-bomb.description=Don't double-click this! Explodes within enemy vicinity with a powerful explosion.
 block.cyber-io-p2p-node.name=P2P Node
 block.cyber-io-p2p-node.description=A decentralized communication of fluid exchange.
 # Items
@@ -154,11 +154,11 @@ stat.cyber-io-holography-hp-at-least=Health At Least
 cyber-io.cost.second=sec
 cyber-io.cost.minute=min
 cyber-io.speed-increase.range=from {0}% to {1}%
-cyber-io.full-sender=Reach Maximum Senders
-cyber-io.full-receiver=Reach Maximum Receivers
-cyber-io.full-host=Reach Maximum Hosts
-cyber-io.full-client=Reach Maximum Clients
-cyber-io.over-range=Over Range
+cyber-io.full-sender=Reached Maximum Senders
+cyber-io.full-receiver=Reached Maximum Receivers
+cyber-io.full-host=Reached Maximum Hosts
+cyber-io.full-client=Reached Maximum Clients
+cyber-io.over-range=Unreachable
 cyber-io.unsaved-change=You have unsaved changes
 cyber-io.unlimited=Unlimited
 cyber-io.random-name=ABCDEFGHIJKLMNÑOPQRSTUVWXYZabcdefghijklmnñopqrstuvwxy%&#~*|?!£_&-+()/"':;!?
@@ -185,11 +185,11 @@ setting.cyber-io-connection-density.description=The density of arrow between sen
 setting.cyber-io-connection-size.name=Connection Arrow Size
 setting.cyber-io-connection-size.description=The size of arrow between sender and receiver.
 setting.cyber-io-connection-bloom.name=Connection Arrow Bloom
-setting.cyber-io-connection-bloom.description=Whether the transfer arrows be affected with blooming.
+setting.cyber-io-connection-bloom.description=Whether the transfer arrows be affected by blooming.
 setting.cyber-io-connection-animation-speed.name=Connection Animation Speed
 setting.cyber-io-connection-animation-speed.description=The speed of connection animation between sender and receiver.
 setting.cyber-io-show-link-circle.name=Show Connection Circle
-setting.cyber-io-show-link-circle.description=Whether show a circle surrounding sender and receiver.
+setting.cyber-io-show-link-circle.description=Whether to show a circle surrounding sender and receiver.\n[gray]Not recommended especially for large bases. Plum Star Inc. is not responsible for any damage caused by this feature[].
 setting.cyber-io-always-show-link.name=Always Show Connection
 setting.cyber-io-always-show-link.description=Whether the arrow always shows up when they're connected.
 setting.cyber-io-show-wireless-tower-circle.name=Show Wireless Tower Circle
@@ -204,11 +204,11 @@ setting.cyber-io-check-update.button-tooltip=Check whether current Cyber IO is l
 setting.cyber-io-check-update.already-latest=Current Cyber IO is already latest.
 setting.cyber-io-check-update.not-support=Check update doesn't support.
 setting.cyber-io-content-specific.button=Specific Content
-setting.cyber-io-content-specific.button-tip=Select the specific content of Cyber IO
+setting.cyber-io-content-specific.button-tip=Select specific content available for Cyber IO
 setting.cyber-io-content-specific.title=Specific Content
 setting.cyber-io-content-specific.restart=Switch to {0} successfully. Please restart game to reload all contents.
-setting.cyber-io-content-specific.introduction=Select a specific version for Cyber IO to load
-setting.cyber-io-content-specific.saves-warning=NOTE: the saves with Cyber IO can't be shared among different specific versions.
+setting.cyber-io-content-specific.introduction=Please select a specific version for Cyber IO to load
+setting.cyber-io-content-specific.saves-warning=NOTE: The saves with Cyber IO can't be shared among different specific versions.
 setting.cyber-io-content-specific.switch-to=You will switch to {0}
 setting.cyber-io-content-specific.switch-back=You switch back to {0}
 setting.cyber-io-content-specific.require-restart=Restart required.
@@ -228,9 +228,9 @@ advanced.cyber-io.map-cleaner=Map Cleaner
 advanced.cyber-io.map-cleaner.description=Enable Map Cleaner, you will find a special button named "Map Cleaner" in the settings menu while you are playing in a local map. Hit the button, then it will clear all contents from Cyber IO in that map.
 # Content Specific
 cyber-io.spec.vanilla.name=Serpulo
-cyber-io.spec.vanilla.desc=Playing Cyber IO on Serpulo.
+cyber-io.spec.vanilla.desc=Playing Cyber IO with Serpulo content.
 cyber-io.spec.erekir.name=Erekir
-cyber-io.spec.erekir.desc=Playing Cyber IO on Erekir.
+cyber-io.spec.erekir.desc=Playing Cyber IO with Erekir content.
 # Heimdall
 heimdall.damage.name=Damage
 heimdall.damage.description=How much damage the brain wave can cause
