--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -69,13 +69,13 @@ block.cyber-io-stealth.name=Stealth
 block.cyber-io-stealth.description=******Permission Denied*******
 block.cyber-io-stealth.unaccepted=Permission Denied
 block.cyber-io-aqua-cyberion.name=Cyberion
-block.cyber-io-aqua-cyberion.description=A common liquid.
+block.cyber-io-aqua-cyberion.description=You saw nothing.
 block.cyber-io-wireless-tower.name=Wireless Tower
 block.cyber-io-wireless-tower.description=Transfers battery energy seamlessly. The ionizing radiation is harmless for your mechanical body.
 block.cyber-io-wireless-tower.details=Powered by Plum Star Inc. Literally.
 block.cyber-io-wireless-tower.stats.power-use=Based on the amount of power use.
 block.cyber-io-data-miner.name=Data Miner
-block.cyber-io-data-miner.description=Extracts the real mineral by AI. If you find this, please know that this item is reserved. 
+block.cyber-io-data-miner.description=You saw nothing. Turn around, leave and have a wonderful day. (this block has been reserved for so long)
 block.cyber-io-heimdall.name=Heimdall
 block.cyber-io-heimdall.description=The combination of biotech, brain science and Iot, using Brain\u2013computer interfaces and neural network, can totally change the enemy's mindset.\nHas varying upgrades whenever connected properly.
 block.cyber-io-heimdall.details=The project of New Brains Crop.
@@ -195,7 +195,7 @@ setting.cyber-io-always-show-link.description=Whether the arrow always shows up 
 setting.cyber-io-show-wireless-tower-circle.name=Show Wireless Tower Circle
 setting.cyber-io-show-wireless-tower-circle.description=Whether the infinite pinging circle will show up
 setting.cyber-io-show-welcome.name=Receive Message from Plum Star Inc.
-setting.cyber-io-show-welcome.description=Whether flavourful text shows up when game starts up.
+setting.cyber-io-show-welcome.description=Whether flavor text shows up when the game starts up.
 # Extra Settings
 setting.cyber-io-show-update.name=Show CyberIO Update Notification
 setting.cyber-io-show-update.description=Whether check update when game starts up.
