fixed `hardcoded Max Sender in Receiver's statistics`.

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -141,13 +141,13 @@ category.cyber-io-holography=Holography
 stat.cyber-io-heimdall-basic=Basic
 stat.cyber-io-heimdall-improve=Upgrades
 stat.cyber-io-data-transfer-range=Range
-stat.cyber-io-data-transfer-max-sender=Max. Sender
-stat.cyber-io-data-transfer-max-receiver=Max. Receiver
-stat.cyber-io-data-transfer-max-host=Max. Host
-stat.cyber-io-data-transfer-max-client=Max. Client
+stat.cyber-io-data-transfer-max-sender=Maximum Sender
+stat.cyber-io-data-transfer-max-receiver=Maximum Receiver
+stat.cyber-io-data-transfer-max-host=Maximum Host
+stat.cyber-io-data-transfer-max-client=Maximum Client
 stat.cyber-io-data-transfer-speed=Transfer Speed
 stat.power-cyber-io-transfer-speed=Transfer Speed
-stat.optional-cyber-io-max-obelisk=Max. Obelisk
+stat.optional-cyber-io-max-obelisk=Maximum Obelisk
 stat.cyber-io-holography-charge=Charge
 stat.cyber-io-holography-hp-at-least=Health At Least
 # Bundles
