--- a/.github/workflows/PullRequest.yml
+++ b/.github/workflows/PullRequest.yml
@@ -1,29 +1,32 @@
-name: Pull Request Testing
-
-on: [ pull_request ]
+name: Build Cyber IO when Pull Request
+on: pull_request
 
 jobs:
   buildJar:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v3
+
       - name: Set up PATH
         run: |
           echo "${ANDROID_HOME}/build-tools/30.0.1" >> $GITHUB_PATH
+
       - name: Set up JDK 16
         uses: actions/setup-java@v1
         with:
           java-version: 16
+
       - name: Test mod
         run: |
           chmod +x gradlew
           ./gradlew test
+
       - name: Build mod jar
         run: |
           chmod +x gradlew
           ./gradlew :main:deploy
-      - name: Upload built jar file
+
+      - name: Upload Cyber-IO jar
         uses: actions/upload-artifact@v3
         with:
           name: ${{ github.event.repository.name }} Pull Request
