--- a/.github/workflows/PullRequest.yml
+++ b/.github/workflows/PullRequest.yml
@@ -11,10 +11,12 @@ jobs:
         run: |
           echo "${ANDROID_HOME}/build-tools/30.0.1" >> $GITHUB_PATH
 
-      - name: Set up JDK 16
-        uses: actions/setup-java@v1
+      - name: Set up JDK 17
+        uses: actions/setup-java@v2
         with:
-          java-version: 16
+          java-version: '17'
+          distribution: 'temurin'
+          cache: 'gradle'
 
       - name: Test mod
         run: |
