--- a/.github/workflows/PullRequest.yml
+++ b/.github/workflows/PullRequest.yml
@@ -2,14 +2,13 @@ name: Build Cyber IO when Pull Request
 on: pull_request
 
 jobs:
-  buildJar:
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
 
       - name: Set up PATH
-        run: |
-          echo "${ANDROID_HOME}/build-tools/30.0.1" >> $GITHUB_PATH
+        run: echo "${ANDROID_HOME}/build-tools/30.0.1" >> $GITHUB_PATH
 
       - name: Set up JDK 17
         uses: actions/setup-java@v2
