--- a/.github/workflows/Push.yml
+++ b/.github/workflows/Push.yml
@@ -30,5 +30,5 @@ jobs:
       - name: Upload Cyber-IO jar
         uses: actions/upload-artifact@v3
         with:
-          name: CyberIO-Unzip-This
+          name: I-am-CyberIO-Unzip-me
           path: main/build/tmp/deploy/*.jar
