using reference for WelcomeScene, WelcomeCondition, and WelcomeAction

--- a/assets/welcomes/en.properties
+++ b/assets/welcomes/en.properties
@@ -17,9 +17,9 @@ Discord.no=Mark as Junk
 UpdateECHO.title=Update ECHO
 UpdateECHO=News: Recently, the ECHO has published a new version {0}.\n\
   You can click the button below to update your ECHO terminal.
-UpdateECHO.button-a=[accent]Update[]
-UpdateECHO.button-b=Not Now
-UpdateECHO.button-c=Skip This
+UpdateECHO.update=[accent]Update[]
+UpdateECHO.no=Not Now
+UpdateECHO.skip-this=Skip This
 UpdateECHO.break-update-warning=Warning: The latest version is a break update, so it may make your saves corrupted. Be careful!
 #v2
 EmploymentVerification.title=Employment Verification
