--- a/assets/welcomes/ja.properties
+++ b/assets/welcomes/ja.properties
@@ -17,9 +17,9 @@ Discord.no=\u30B8\u30E3\u30F3\u30AF\u3068\u3057\u3066\u30DE\u30FC\u30AF
 UpdateECHO.title=\uFF25\uFF23\uFF28\uFF2F\u3092\u66F4\u65B0\u3059\u308B
 UpdateECHO=News: \u6700\u8FD1\u3001\uFF25\uFF23\uFF28\uFF2F\u306F\u65B0\u3057\u3044\u30D0\u30FC\u30B8\u30E7\u30F3\u3092\u516C\u958B\u3057\u307E\u3057\u305F {0}\u3002\n\
   \u4E0B\u306E\u30DC\u30BF\u30F3\u3092\u30AF\u30EA\u30C3\u30AF\u3057\u3066\u3001\uFF25\uFF23\uFF28\uFF2F\u7AEF\u672B\u3092\u66F4\u65B0\u3067\u304D\u307E\u3059\u3002
-UpdateECHO.button-a=\u66F4\u65B0\u3059\u308B
-UpdateECHO.button-b=\u4ECA\u306F\u3084\u3081\u308D
-UpdateECHO.button-c=\u8868\u793A\u3057\u306A\u3044
+UpdateECHO.update=\u66F4\u65B0\u3059\u308B
+UpdateECHO.no=\u4ECA\u306F\u3084\u3081\u308D
+UpdateECHO.skip-this=\u8868\u793A\u3057\u306A\u3044
 #v2
 EmploymentVerification.title=\u96C7\u7528\u78BA\u8A8D
 EmploymentVerification=\u300APlum Star Inc.\u300B\u306B\u3088\u3046\u3053\u305D\u3002\u6B64\u306E\u65B0\u3057\u3044\u30D0\u30FC\u30B8\u30E7\u30F3\u306E\u5B8C\u5168\u306A\u30B5\u30A4\u30D0\u30CD\u30C6\u30A3\u30C3\u30AF\u30B9\u3092\u304A\u697D\u3057\u307F\u304F\u3060\u3055\u3044\uFF01\n\
