--- a/assets/welcomes/en.properties
+++ b/assets/welcomes/en.properties
@@ -8,7 +8,7 @@ Default.read=I see
 welcome=Welcome to play Cyber IO {0}.
 Discord.title=Discord
 Discord=Sometimes, roaming in the space alone, you may want to seek a community \n\
-  to share your work or just have a problem (of course, NO BUG).\n\
+  to share your work or just have a problem.\n\
   Alright, despite bad ECHO signal, our company is waiting for you, Plum Star on Discord.\n\
   Now, join us to secure reputation or report anything you want.
 Discord.link=https://discord.gg/PDwyxM3waw
