--- a/gradle.properties
+++ b/gradle.properties
@@ -3,3 +3,4 @@ kotlin.code.style=official
 PlumyVersion=7597fd8bb8
 mktxVersion=7a1dc3ff54
 mgpp.deploy.enableFatJar=false
+org.gradle.parallel=true
