optimized gradle building speed

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,8 @@
 # suppress inspection "SpellCheckingInspection" for whole file
+org.gradle.parallel=true
+org.gradle.daemon=true
+org.gradle.caching=true
 kotlin.code.style=official
 PlumyVersion=7597fd8bb8
 mktxVersion=7a1dc3ff54
 mgpp.deploy.enableFatJar=false
-org.gradle.parallel=true
